[package]
name = "wgpu-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
wgpu = "0.17.1"
pollster = "0.3"

[dependencies.winit]
version = "0.29.2"
features = ["rwh_04", "rwh_05"]
